--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 playwright~=1.19.1
 pypinyin~=0.46.0
 rich~=11.2.0
+opencv-python~=4.5.5.64
+numpy~=1.22.3
+Pillow~=9.1.0
+future~=0.18.2
+pyperclip~=1.8.2
+cnocr~=2.1.0
